[package]
name = "home-oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
color-eyre = "0.6.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
asserting = "0.9.0"
axum-test = "18.2.1"
http-body-util = "0.1.3"
tower = "0.5.2"
url = "2.5.7"
