[package]
name = "home-oauth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22.1"
color-eyre = "0.6.5"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
asserting = "0.9.0"
axum-test = "18.2.1"
http-body-util = "0.1.3"
tower = "0.5.2"
url = "2.5.7"
